# sippak

./: .gitignore  .syntastic_c_config  .syntastic_cpp_config  .travis-install.sh  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README  README.md  \
.github/workflows/: main.yml
src/: CMakeLists.txt  main.c
src/app/: CMakeLists.txt  dns.c  getopts.c  media_helper.c  sip_helper.c  usage.c
src/app_helper/: CMakeLists.txt  authcalc.c  getopts.c  usage.c
src/dns_helper/: CMakeLists.txt  dns.c
src/include/: sippak.h  sippak.h.in
src/mod/: CMakeLists.txt  auth.c  invite.c  logger.c  logger.h  message.c  notify.c  ping.c  publish.c  refer.c  register.c  sip_mangler.c  subscribe.c
src/mod_logger/: CMakeLists.txt  logger.c  logger.h
src/mod_ping/: CMakeLists.txt  ping.c
tests/: CMakeLists.txt
tests/acceptance/: CMakeGetopts.cmake  CMakeLists.txt  CMakeSIPPScenarios.cmake  test.invite_auth.pl  test.invite_basic.pl  test.invite_cancel.pl  test.invite_proxy.pl  test.message_auth.pl  test.message_basic.pl  test.notify_auth.pl  test.notify_basic.pl  test.options_basic.pl  test.options_basic_trailing_dot.pl  test.ping_auth.pl  test.ping_options.pl  test.ping_options_tcp.pl  test.ping_retrans.pl  test.ping_src_port_host.pl  test.publish_auth.pl  test.publish_basic.pl  test.refer_auth.pl  test.refer_basic.pl  test.register_auth.pl  test.register_no_auth.pl  test.subscribe_auth.pl  test.subscribe_basic.pl  test.subscribe_mwi.pl  test.subscribe_terminate.pl  test.usage_opts.pl
tests/acceptance/sipp_scenarios/: invite.auth.xml  invite.basic.xml  invite.cancel.xml  invite.proxy.xml  message.auth.xml  message.basic.xml  notify.auth.xml  notify.basic.xml  options.408.xml  options.auth.xml  options.basic.xml  publish.auth.xml  publish.basic.xml  refer.auth.xml  refer.basic.xml  register.auth.xml  register.no_auth.xml  subscribe.auth.xml  subscribe.basic.xml  subscribe.mwi.xml  subscribe.terminated.xml
tests/unit/: CMakeLists.txt  resolv.conf  test_auth_calc.c  test_dns_helper.c  test_getopts.c  test_media_helper.c  test_sip_helper.c
